--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 
 <h1>Portfolio</h1>
-<a href="/fanikauppa/index.html">Fanikauppa (react)</a>
+<a href="/fanikauppa/">Fanikauppa (react)</a>
 </body>
 </html>
