--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
 
 <h1>Portfolio</h1>
-<a href="/Fanikauppa/index.html">Fanikauppa (react)</a>
+<a href="https://neorust.github.io/Fanikauppa/">Fanikauppa (react)</a>
 </body>
 </html>
