--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Portfolio</h1>
-<a href="https://neorust.github.io/fanikauppa/">Fanikauppa (react)</a>
+<h1>Elinan portfolio</h1>
+<a href="/fanikauppa/index.html">Fanikauppa (react)</a>
 </body>
 </html>
